Set up main layout for home page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Sep 21 2020 09:25:18 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Sep 21 2020 11:06:26 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -16,20 +16,77 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
+  <div class="hero_section">
+    <div data-poster-url="videos/needles_in_back-poster-00001.jpg" data-video-urls="videos/needles_in_back-transcode.mp4,videos/needles_in_back-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/needles_in_back-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover"><source src="videos/needles_in_back-transcode.mp4" data-wf-ignore="true"><source src="videos/needles_in_back-transcode.webm" data-wf-ignore="true"></video>
+      <h1 class="heading">Ryu Acupuncture Clinic, Inc</h1>
+      <h1 class="heading-2">Wellness is a journey</h1>
+    </div>
+  </div>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="w-container"><a href="#" class="w-nav-brand"></a>
+    <div class="menu_container"><a href="#" class="brand w-nav-brand"></a>
       <nav role="navigation" class="w-nav-menu"><a href="#" class="w-nav-link">Home</a><a href="#" class="w-nav-link">About</a><a href="#" class="w-nav-link">Services</a><a href="#" class="w-nav-link">Testimonials</a><a href="#" class="w-nav-link">Contact</a></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
     </div>
   </div>
-  <div class="hero_section"></div>
   <div class="about_section">
-    <div class="main_container"></div>
+    <div class="main_container">
+      <h2 class="section_h2">About</h2>
+      <p>Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist. He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine. Dr. Ryu has been in private practice since 1997. Dr. Ryu serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology. He has also been a continuing education instructor for acupuncturists. Dr. Ryu specializes in infertility, allergies, asthma, and pain management for conditions such as back pain and neck pain. <a href="https://www.google.com/url?q=https%3A%2F%2Fsites.google.com%2Fview%2Fryuacupunctureclinic%2Fabout&amp;sa=D&amp;sntz=1&amp;usg=AFQjCNFWJtxqc9yZ-Pnd3N2EUmtrP_MLVA" target="_blank"><strong>Click here</strong></a><strong> </strong>to learn more about Dr. Ryu&#x27;s professional ﻿history!</p>
+      <div class="_2_block_row">
+        <div class="_2_block">
+          <h2 class="section_h2">Dr. Ryu</h2>
+          <p>Ryu Acupuncture Clinic first opened in 1997 in Burbank, California.<br><br>Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist.  He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine.<br><br>He serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology.  Dr. Ryu has also been a continuing education instructor for acupuncturists.<br><br>He is fluent in both English and Korean.  Dr. Ryu has glowing success in issues regarding infertility, allergies, asthma, facial rejuvenation, pain management, and female issues. </p>
+        </div>
+        <div class="_2_block"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu.jpg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 40vw, (max-width: 767px) 43vw, 45vw" alt=""></div>
+      </div>
+      <div class="_2_block_row">
+        <div class="_2_block"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu.jpg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 40vw, (max-width: 767px) 43vw, 45vw" alt=""></div>
+        <div class="_2_block">
+          <h2 class="section_h2">Dr. ???</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        </div>
+      </div>
+      <div class="_2_block_row">
+        <div class="_2_block">
+          <h2 class="section_h2">Jennifer</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        </div>
+        <div class="_2_block"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu.jpg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 40vw, (max-width: 767px) 43vw, 45vw" alt=""></div>
+      </div>
+    </div>
+  </div>
+  <div class="parallax_section">
+    <div class="parallax_block_herbs"></div>
   </div>
   <div class="services_section">
     <div class="main_container"></div>
+  </div>
+  <div class="parallax_section">
+    <div class="parallax_block_needles"></div>
+  </div>
+  <div class="contact_section">
+    <div class="main_container">
+      <h1 class="section_h2">Contact Us</h1>
+      <div class="_2_block_row">
+        <div class="_2_block">
+          <div class="w-widget w-widget-map"></div>
+        </div>
+        <div class="_2_block">
+          <div class="w-form">
+            <form id="email-form" name="email-form" data-name="Email Form"><label for="name">Name</label><input type="text" class="w-input" maxlength="256" name="name" data-name="Name" placeholder="" id="name"><label for="email">Phone Number</label><input type="text" class="w-input" maxlength="256" name="name-2" data-name="Name 2" placeholder="" id="name-2"><label for="email-2">Email Address</label><input type="email" class="w-input" maxlength="256" name="email" data-name="Email" placeholder="" id="email" required="">
+              <div class="w-form-formrecaptcha g-recaptcha g-recaptcha-error g-recaptcha-disabled g-recaptcha-invalid-key"></div><input type="submit" value="Submit" data-wait="Please wait..." class="w-button"></form>
+            <div class="w-form-done">
+              <div>Thank you! Your submission has been received!</div>
+            </div>
+            <div class="w-form-fail">
+              <div>Oops! Something went wrong while submitting the form.</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="footer_section"></div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f686908b6be43eb4fb09bd7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
