Added the additional pages for a simple 5 page set up, restructuring flow and adjusting links, classes, spacing

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Sep 21 2020 13:53:39 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Sep 22 2020 08:07:56 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -16,7 +16,7 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
-  <div class="hero_section">
+  <div id="Hero" class="hero_section">
     <div data-poster-url="videos/needles_in_back-poster-00001.jpg" data-video-urls="videos/needles_in_back-transcode.mp4,videos/needles_in_back-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/needles_in_back-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover"><source src="videos/needles_in_back-transcode.mp4" data-wf-ignore="true"><source src="videos/needles_in_back-transcode.webm" data-wf-ignore="true"></video>
       <h1 class="heading">Ryu Acupuncture Clinic, Inc</h1>
       <h1 class="heading-2">Wellness is a journey</h1>
@@ -24,13 +24,13 @@
   </div>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container"><a href="#" class="brand w-nav-brand"></a>
-      <nav role="navigation" class="w-nav-menu"><a href="#" class="w-nav-link">Home</a><a href="#" class="w-nav-link">About</a><a href="#" class="w-nav-link">Services</a><a href="#" class="w-nav-link">Testimonials</a><a href="#" class="w-nav-link">Contact</a></nav>
+      <nav role="navigation" class="w-nav-menu"><a href="#Hero" class="w-nav-link">Home</a><a href="about.html" class="w-nav-link">About</a><a href="services.html" class="w-nav-link">Services</a><a href="testimonials.html" class="w-nav-link">Testimonials</a><a href="contact.html" class="w-nav-link">Contact</a></nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
     </div>
   </div>
-  <div class="about_section">
+  <div id="About" class="about_section">
     <div class="main_container">
       <h2 class="section_h2">About</h2>
       <p class="paragraph-4">Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist. He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine. Dr. Ryu has been in private practice since 1997. Dr. Ryu serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology. He has also been a continuing education instructor for acupuncturists. Dr. Ryu specializes in infertility, allergies, asthma, and pain management for conditions such as back pain and neck pain. <a href="https://www.google.com/url?q=https%3A%2F%2Fsites.google.com%2Fview%2Fryuacupunctureclinic%2Fabout&amp;sa=D&amp;sntz=1&amp;usg=AFQjCNFWJtxqc9yZ-Pnd3N2EUmtrP_MLVA" target="_blank"><strong>Click here</strong></a><strong> </strong>to learn more about Dr. Ryu&#x27;s professional ﻿history!</p>
@@ -38,7 +38,7 @@
         <div class="_2_block">
           <div data-animation="slide" data-duration="500" data-infinite="1" class="w-slider">
             <div class="w-slider-mask">
-              <div class="w-slide"><img src="images/ryu_mom_daughter.jpg" loading="lazy" srcset="images/ryu_mom_daughter.jpg 500w, images/ryu_mom_daughter.jpg 1000w" sizes="(max-width: 479px) 40vw, (max-width: 767px) 43vw, 45vw" alt=""></div>
+              <div class="w-slide"><img src="images/ryu_mom_daughter.jpg" loading="lazy" srcset="images/ryu_mom_daughter-p-500.jpeg 500w, images/ryu_mom_daughter.jpg 1000w" sizes="(max-width: 479px) 40vw, (max-width: 767px) 43vw, 45vw" alt=""></div>
               <div class="w-slide"><img src="images/ryu_mom_dad.jpg" loading="lazy" alt=""></div>
             </div>
             <div class="w-slider-arrow-left">
@@ -56,59 +56,31 @@
           </div>
         </div>
       </div>
-      <div class="_2_block_row">
-        <div class="_2_block">
-          <h2 class="section_h2">Dr. Ryu</h2>
-          <p>Ryu Acupuncture Clinic first opened in 1997 in Burbank, California.<br><br>Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist.  He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine.<br><br>He serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology.  Dr. Ryu has also been a continuing education instructor for acupuncturists.<br><br>He is fluent in both English and Korean.  Dr. Ryu has glowing success in issues regarding infertility, allergies, asthma, facial rejuvenation, pain management, and female issues. </p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-        </div>
-        <div class="_2_block"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu.jpg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 40vw, (max-width: 767px) 43vw, 45vw" alt=""></div>
-      </div>
-      <div class="_2_block_row">
-        <div class="_2_block"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu.jpg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 40vw, (max-width: 767px) 43vw, 45vw" alt=""></div>
-        <div class="_2_block">
-          <h2 class="section_h2">Veronica</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-        </div>
-      </div>
-      <div class="_2_block_row">
-        <div class="_2_block">
-          <h2 class="section_h2">Jennifer</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-        </div>
-        <div class="_2_block"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu.jpg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 40vw, (max-width: 767px) 43vw, 45vw" alt=""></div>
-      </div>
     </div>
   </div>
   <div class="parallax_section">
     <div class="parallax_block_herbs"></div>
   </div>
-  <div class="services_section">
+  <div id="Services" class="services_section">
     <div class="main_container">
       <h2 class="section_h2">Services</h2>
       <p class="main_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <div class="cards_grid">
         <div id="w-node-bb3cbd291ef5-bfb09bd8" class="card_block">
-          <div class="crads_img_mask"><img src="images/needles_close_up.jpg" srcset="images/needles_close_up.jpg 500w, images/needles_close_up.jpg 588w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 32vw, 31vw" alt="" class="cards_img"></div>
+          <div class="crads_img_mask"><img src="images/needles_close_up.jpg" srcset="images/needles_close_up-p-500.jpeg 500w, images/needles_close_up.jpg 588w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 32vw, 31vw" alt="" class="cards_img"></div>
           <h3 class="card_h3">Acupuncture</h3>
-          <p class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p><a href="#" class="button w-button">Learn More</a></div>
+          <p class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+        </div>
         <div id="w-node-bb3cbd291efc-bfb09bd8" class="card_block">
-          <div class="crads_img_mask"><img src="images/cupping.jpg" srcset="images/cupping.jpg 500w, images/cupping.jpg 800w, images/cupping.jpg 900w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 32vw, 31vw" alt="" class="cards_img"></div>
+          <div class="crads_img_mask"><img src="images/cupping.jpg" srcset="images/cupping-p-500.jpeg 500w, images/cupping-p-800.jpeg 800w, images/cupping.jpg 900w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 32vw, 31vw" alt="" class="cards_img"></div>
           <h3 id="w-node-bb3cbd291eff-bfb09bd8" class="card_h3">Cupping</h3>
-          <p id="w-node-bb3cbd291f01-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p><a href="#" class="button w-button">Learn More</a></div>
+          <p id="w-node-bb3cbd291f01-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+        </div>
         <div id="w-node-bb3cbd291f03-bfb09bd8" class="card">
-          <div class="crads_img_mask"><img src="images/chinese_herbs.jpg" srcset="images/chinese_herbs.jpg 500w, images/chinese_herbs.jpg 1080w, images/chinese_herbs.jpg 1430w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 32vw, 31vw" alt="" class="cards_img"></div>
+          <div class="crads_img_mask"><img src="images/chinese_herbs.jpg" srcset="images/chinese_herbs-p-500.jpeg 500w, images/chinese_herbs-p-1080.jpeg 1080w, images/chinese_herbs.jpg 1430w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 32vw, 31vw" alt="" class="cards_img"></div>
           <h3 id="w-node-bb3cbd291f06-bfb09bd8" class="card_h3">Traditional Chinese Herbs</h3>
-          <p id="w-node-bb3cbd291f08-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p><a href="#" class="button w-button">Learn More</a></div>
+          <p id="w-node-bb3cbd291f08-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+        </div>
       </div>
       <p class="main_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <h3>Suffering from any of these conditions?</h3>
@@ -192,7 +164,7 @@
   <div class="parallax_section">
     <div class="parallax_block_needles"></div>
   </div>
-  <div class="contact_section">
+  <div id="Contact" class="contact_section">
     <div class="main_container">
       <h1 class="section_h2">Contact Us</h1>
       <div class="_2_block_row">
