--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Sep 21 2020 13:53:39 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Sep 22 2020 08:07:56 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f68aaf0aa962780bdc97355" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -18,6 +18,14 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
+  <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
+    <div class="menu_container"><a href="#" class="brand w-nav-brand"></a>
+      <nav role="navigation" class="w-nav-menu"><a href="#" class="w-nav-link">Home</a><a href="about.html" aria-current="page" class="w-nav-link w--current">About</a><a href="services.html" class="w-nav-link">Services</a><a href="testimonials.html" class="w-nav-link">Testimonials</a><a href="contact.html" class="w-nav-link">Contact</a></nav>
+      <div class="w-nav-button">
+        <div class="w-icon-nav-menu"></div>
+      </div>
+    </div>
+  </div>
   <div class="_4_block_row">
     <div class="_4_block"></div>
     <div class="_4_block"><img src="images/5-stars.png" loading="lazy" alt="">
@@ -25,6 +33,124 @@
     </div>
     <div class="_4_block"></div>
     <div class="_4_block"></div>
+  </div>
+  <div class="main_container">
+    <h2 class="section_h2">About</h2>
+    <p class="paragraph-4">Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist. He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine. Dr. Ryu has been in private practice since 1997. Dr. Ryu serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology. He has also been a continuing education instructor for acupuncturists. Dr. Ryu specializes in infertility, allergies, asthma, and pain management for conditions such as back pain and neck pain. <a href="https://www.google.com/url?q=https%3A%2F%2Fsites.google.com%2Fview%2Fryuacupunctureclinic%2Fabout&amp;sa=D&amp;sntz=1&amp;usg=AFQjCNFWJtxqc9yZ-Pnd3N2EUmtrP_MLVA" target="_blank"><strong>Click here</strong></a><strong> </strong>to learn more about Dr. Ryu&#x27;s professional ﻿history!</p>
+    <div class="_2_block_row">
+      <div class="_2_block">
+        <div data-animation="slide" data-duration="500" data-infinite="1" class="w-slider">
+          <div class="w-slider-mask">
+            <div class="w-slide"><img src="images/ryu_mom_daughter.jpg" loading="lazy" srcset="images/ryu_mom_daughter-p-500.jpeg 500w, images/ryu_mom_daughter.jpg 1000w" sizes="(max-width: 479px) 40vw, (max-width: 767px) 43vw, 45vw" alt=""></div>
+            <div class="w-slide"><img src="images/ryu_mom_dad.jpg" loading="lazy" alt=""></div>
+          </div>
+          <div class="w-slider-arrow-left">
+            <div class="w-icon-slider-left"></div>
+          </div>
+          <div class="w-slider-arrow-right">
+            <div class="w-icon-slider-right"></div>
+          </div>
+          <div class="w-slider-nav w-round"></div>
+        </div>
+      </div>
+      <div class="_2_block">
+        <div class="div-block">
+          <div>Hours maybe? Don&#x27;t think it is needed but perhaps...</div>
+        </div>
+      </div>
+    </div>
+    <div class="_2_block_row">
+      <div class="_2_block">
+        <h2 class="section_h2">Dr. Ryu</h2>
+        <p>Ryu Acupuncture Clinic first opened in 1997 in Burbank, California.<br><br>Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist.  He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine.<br><br>He serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology.  Dr. Ryu has also been a continuing education instructor for acupuncturists.<br><br>He is fluent in both English and Korean.  Dr. Ryu has glowing success in issues regarding infertility, allergies, asthma, facial rejuvenation, pain management, and female issues. </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      </div>
+      <div class="_2_block"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 40vw, (max-width: 767px) 43vw, 45vw" alt=""></div>
+    </div>
+    <div class="_2_block_row">
+      <div class="_2_block"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 40vw, (max-width: 767px) 43vw, 45vw" alt=""></div>
+      <div class="_2_block">
+        <h2 class="section_h2">Veronica</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      </div>
+    </div>
+    <div class="_2_block_row">
+      <div class="_2_block">
+        <h2 class="section_h2">Jennifer</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      </div>
+      <div class="_2_block"><img src="images/dr_ryu.jpg" loading="lazy" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" sizes="(max-width: 479px) 40vw, (max-width: 767px) 43vw, 45vw" alt=""></div>
+    </div>
+  </div>
+  <div class="footer_section">
+    <div class="ends_container">
+      <div class="_4_block_row">
+        <div class="_4_block">
+          <h3 class="footer_h3">RYU ACUPUNCTURE</h3>
+          <div class="w-layout-grid footer_grid_1_block">
+            <ul role="list" class="w-list-unstyled">
+              <li class="footer_link-2"></li>
+            </ul>
+          </div>
+        </div>
+        <div class="_4_block">
+          <h3 class="footer_h3">Navigation</h3>
+          <div class="w-layout-grid footer_grid_2_block">
+            <ul role="list" class="w-list-unstyled">
+              <li class="footer_link"><a href="#" class="link_white">About</a></li>
+              <li class="footer_link"><a href="#" class="link_white">Services</a></li>
+              <li class="footer_link"><a href="#" class="link_white">Testimonials</a></li>
+              <li class="footer_link"><a href="#" class="link_white">Blog</a></li>
+            </ul>
+            <ul role="list" class="w-list-unstyled">
+              <li class="footer_link"><a href="#" class="link_white">Terms of Use</a></li>
+              <li class="footer_link"><a href="#" class="link_white">Privacy Policy</a></li>
+              <li class="footer_link"><a href="#" class="link_white">Site Map</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="_4_block">
+          <h3 class="footer_h3">Hours</h3>
+          <div class="w-layout-grid footer_grid_1_block">
+            <ul role="list" class="w-list-unstyled">
+              <li>Mon: 9:30AM - 6:00PM</li>
+              <li>Tue: 10:00AM - 2:00PM</li>
+              <li>Wed: 9:30AM - 6:00PM</li>
+              <li>Thu: 10:00AM - 2:00PM</li>
+              <li>Fri: 9:30AM - 6:00PM</li>
+              <li>Sat: 9:00AM - 2:00PM</li>
+              <li>Sun: Closed</li>
+            </ul>
+          </div>
+        </div>
+        <div class="_4_block">
+          <h3 class="footer_h3">Contact Us</h3>
+          <div class="w-layout-grid footer_grid_1_block">
+            <ul role="list" class="w-list-unstyled">
+              <li>3808 W. Riverside Dr. - Suite 510</li>
+              <li>Burbank, CA 91505</li>
+              <li>Phone: (818) 841-9790</li>
+              <li>Text: (909) 566-2258</li>
+              <li>Fax: (818) 841-9092</li>
+              <li class="footer_link-2"><a href="mailto:jb@johnbarrett.io" class="footer_link-2">ryuacupuncture@yahoo.com</a></li>
+              <li class="footer_list_item"><a href="https://www.linkedin.com/in/barrettjj/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://github.com/JohnJBarrett22" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="legal_block">
+      <div class="text-block-2">© 2020 Ryu Acupuncture Clinic, Inc - All rights reserved.</div>
+    </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f686908b6be43eb4fb09bd7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
