Added new hero video, removed slider from home page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Sep 23 2020 04:02:20 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 23 2020 10:54:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div id="Hero" class="hero_section">
-    <div data-poster-url="videos/needles_in_back-poster-00001.jpg" data-video-urls="videos/needles_in_back-transcode.mp4,videos/needles_in_back-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/needles_in_back-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover"><source src="videos/needles_in_back-transcode.mp4" data-wf-ignore="true"><source src="videos/needles_in_back-transcode.webm" data-wf-ignore="true"></video>
+    <div data-poster-url="videos/ryu_acupuncture_hero-poster-00001.jpg" data-video-urls="videos/ryu_acupuncture_hero-transcode.mp4,videos/ryu_acupuncture_hero-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/ryu_acupuncture_hero-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover"><source src="videos/ryu_acupuncture_hero-transcode.mp4" data-wf-ignore="true"><source src="videos/ryu_acupuncture_hero-transcode.webm" data-wf-ignore="true"></video>
       <h1 class="heading">Ryu Acupuncture Clinic, Inc</h1>
       <h1 class="heading-2">Wellness is a journey</h1>
     </div>
@@ -34,22 +34,8 @@
       <h2 class="section_h2">About</h2>
       <p class="paragraph-4">Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist. He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine. Dr. Ryu has been in private practice since 1997. Dr. Ryu serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology. He has also been a continuing education instructor for acupuncturists. Dr. Ryu specializes in infertility, allergies, asthma, and pain management for conditions such as back pain and neck pain. <a href="https://www.google.com/url?q=https%3A%2F%2Fsites.google.com%2Fview%2Fryuacupunctureclinic%2Fabout&amp;sa=D&amp;sntz=1&amp;usg=AFQjCNFWJtxqc9yZ-Pnd3N2EUmtrP_MLVA" target="_blank"><strong>Click here</strong></a><strong> </strong>to learn more about Dr. Ryu&#x27;s professional ﻿history!</p>
       <div class="_2_block_row">
-        <div class="_2_block">
-          <div data-animation="slide" data-duration="500" data-infinite="1" class="w-slider">
-            <div class="w-slider-mask">
-              <div class="w-slide"><img src="images/ryu_mom_daughter.jpg" loading="lazy" srcset="images/ryu_mom_daughter-p-500.jpeg 500w, images/ryu_mom_daughter.jpg 1000w" sizes="(max-width: 479px) 40vw, (max-width: 767px) 43vw, 45vw" alt=""></div>
-              <div class="w-slide"><img src="images/ryu_mom_dad.jpg" loading="lazy" alt=""></div>
-            </div>
-            <div class="w-slider-arrow-left">
-              <div class="w-icon-slider-left"></div>
-            </div>
-            <div class="w-slider-arrow-right">
-              <div class="w-icon-slider-right"></div>
-            </div>
-            <div class="w-slider-nav w-round"></div>
-          </div>
-        </div>
-        <div class="_2_block">
+        <div class="_65_block"></div>
+        <div class="_35_block">
           <div class="div-block">
             <div class="w-layout-grid grid-2">
               <h3>Monday:</h3>
