Added new yelp 5 star image, created horizontal parallax for testimonials, built out cards and filled content, though still need to adjust class styles for contents within card

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Sep 23 2020 10:54:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 23 2020 13:24:44 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -164,8 +164,68 @@
   <div class="parallax_section">
     <div class="parallax_block_cupping"></div>
   </div>
-  <div class="testimonials_section">
-    <h1 class="section_h2">Testimonials</h1>
+  <div data-w-id="2100a1f4-dc7b-4b45-6d52-944c265363bb" class="testimonials_section">
+    <div class="horizontal_wrapper">
+      <h1 class="section_h2">Testimonials</h1>
+      <div class="horizontal_scroll_content">
+        <div class="testimonial_card">
+          <p class="paragraph-5"><em class="testimonial_para">&quot;This is my second review because we were successful to have another child after receiving acupuncture and herbal treatment from Dr. Ryu! We had our first child in 2016 after getting both acpuncture and herbal treatment for 18 months. Our first IVF was successful. For our second child, I had treaent for about 4 months with Dr Ryu and had a cold transfer. Now our daughter is 3 yo and our son is 3 mons old. They&#x27;re both healthy as they can be and so am I. This is all thanks to Dr. Ryu. Not only I was able to get pregnant twice, my over all health was improved--mostly chronic back pain and severe allergy. Without his treatment, it would be very difficult to get pregnant in such a short period of time.&quot;</em></p><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star">
+          <div class="testimonial_author">Sakie M.</div>
+          <div class="testimonial_date">05/29/20</div>
+        </div>
+        <div class="testimonial_card">
+          <p class="testimonial_para">&quot;In July of 2019, I completely lost my voice. After traditional western doctors either misdiagnosed and then finally &quot;couldn&#x27;t do anything about it, just wait and see&quot;, I started seeing Dr. Ryu. I could literally hear my voice improving after each treatment. I invested the time with him and he came through with amazing results. I truly believe that if I had &quot;waited&quot; and done nothing, I still would have no voice today. He is indeed the real thing. He would also take care of any other pains I had during these visits. I looked forward to treatment.&quot;</p><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star">
+          <div class="testimonial_author">Nancy B.</div>
+          <div class="testimonial_date">11/28/19</div>
+        </div>
+        <div class="testimonial_card">
+          <p class="testimonial_para">&quot;Dr. Ryu is a life saver. He helped my mom with her arm when no one else could, and helped and continues to help my sister with her neck, back, and feminine issues (that you never would have guessed could be helped with acupuncture). Best part (other than his incredible knowledge and ability to treat) is that they take insurance! Love Dr. Ryu. Have to continue my treatments ASAP!&quot;</p><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star">
+          <div class="testimonial_author">Nazeli K.</div>
+          <div class="testimonial_date">07/01/19</div>
+        </div>
+        <div class="testimonial_card">
+          <p class="testimonial_para">&quot;Dr. Ryu has been my primary care physician for over a year, and the experience has been truly exceptional. Our weekly acu appointments have been the only form of care that has mitigated and improved the conditions of chronic digestive issues,  and his consistent attention to detail is unmatched. I&#x27;ve sent several friends his way for a variety of treatment plans, and I can&#x27;t recommend him highly enough!&quot;</p><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star">
+          <div class="testimonial_author">Olivia M.</div>
+          <div class="testimonial_date">03/15/19</div>
+        </div>
+        <div class="testimonial_card">
+          <p class="testimonial_para">&quot;I&#x27;ll be honest. We were pretty much on the fence as to whether acupuncture would work. And my first trip to the doc for headaches was a little worrisome. My second blew my mind and made me a believer - a back ache I&#x27;ve had for years, seriously gone since that one visit and that was more than a year ago. This doc knows his stuff. And he&#x27;s got a witty sense of humor too. The best part of all this is that we believed he helped my wife get pregnant. Her treatments relaxed her, his home-made teas appeared to shock her system and now we&#x27;re expecting! Can&#x27;t say enough about him, he made us believers and we&#x27;ve sent countless friends as a result.&quot;</p><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star">
+          <div class="testimonial_author">J K.</div>
+          <div class="testimonial_date">11/25/18</div>
+        </div>
+        <div class="testimonial_card">
+          <p class="testimonial_para">&quot;Thank you Dr.Ryu! You have saved me from chronic pain that has been dragging me down for years!! I came to Dr Ryu for neck pain from worn out discs which he addressed  imediatley but my real issue was back pain with burning feet. I have tried everything for this problem and nothing worked until Dr. Ryu treated me. He has made it possible for me to tolerate my chronic pain and get my life back! P.S. The office is clean and peaceful and the staff is top notch!!&quot;</p><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star">
+          <div class="testimonial_author">Jon H.</div>
+          <div class="testimonial_date">04/11/18</div>
+        </div>
+        <div class="testimonial_card">
+          <p class="testimonial_para">&quot;Dr Ryu is a miracle worker. I&#x27;ve had tinnitus for a solid year and I&#x27;ve done what one is supposed to do: see an ENT, get an MRI, take a lot of vitamins, and after minimal improvement, I thought I would be stuck with the ringing in my ears for life. As I write this, I have zero tinnitus and full hearing!<br><br>I was recommended to acupuncture for a stiff shoulder/neck by my GP and after a few sessions for Dr Ryu and getting full mobility back in my neck, I casually asked Dr Ryu if he could do something about my ears. He said it was difficult to treat, but I stuck with it for a month before getting sudden relief. I will continue to go back because there is no greater gift than the gift of silence.&quot;</p><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star">
+          <div class="testimonial_author">Emily S.</div>
+          <div class="testimonial_date">02/06/18</div>
+        </div>
+        <div class="testimonial_card">
+          <p class="testimonial_para">&quot;I have been battling chronic migraines for about 20 years with only some relief through medication.  I starting seeing Dr. Ryu for acupuncture. I did not see noticeable change during the first few sessions but by the 5th session, the pain level of my daily migraines began to decrease.  By session 6, I began to have several days of complete relief.  I have finished session 8 today and have had almost an entire migraine free week. I know there is nothing in this world that works on everyone but he has been able to use acupuncture to bring me relief. I highly recommend.&quot;</p><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star">
+          <div class="testimonial_author">Ellen C.</div>
+          <div class="testimonial_date">01/19/18</div>
+        </div>
+        <div class="testimonial_card">
+          <p class="testimonial_para">&quot;Are there more than 5 stars? Dr. Ryu is incredible! I was referred to him by my brother, who is a big fan of acupuncture. I myself had never tried it and was a little hesitant, but after my first visit, I knew I was in good hands. I visited Dr. Ryu primarily for fertility reasons....and within a few months I was pregnant! I am now 6 months along, and I could not be more grateful to Dr. Ryu. Beyond being extremely knowledgeable, he possesses a very calm and comforting demeanor. He is the opposite of pushy, and you can tell that he genuinely wants to help his clients achieve as much health and happiness as possible :) Thank you again Dr. Ryu! I&#x27;ll be bringing the baby by later this year!&quot;</p><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star">
+          <div class="testimonial_author">Erin F.</div>
+          <div class="testimonial_date">06/05/17</div>
+        </div>
+        <div class="testimonial_card">
+          <p class="testimonial_para">&quot;I sought out Dr Ryu as I have low platelets otherwise known as ITP. Western medicine ( Kaiser) wanted me to get on steroids. I wanted to try a more holistic approach.<br>He was instrumental in getting my system operating better which helped ( and brought my platelets up).<br>I see him weekly for acupuncture and also take his Chinese Herbs. He said both were required to do the trick.<br><br>On a personal note he is a joy to talk to. Always listens and has great input about LIFE. He knows each of his clients personally and treats everyone specifically for their issues. I am always happier when I leave the office as the treatments WORK.&quot;</p><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star">
+          <div class="testimonial_author">Heather B.</div>
+          <div class="testimonial_date">10/18/15</div>
+        </div>
+        <div class="testimonial_card">
+          <p class="testimonial_para">&quot;I have been a patient of Dr.Ryu&#x27;s for several years now, and he is the person I go to for pretty much every malady that reveals itself in my body!  :)  He has helped my body to resolve trigger fingers, back issues, headaches, digestive issues, repetitive stress injury from my work, and even concussion recovery.  Plus, a real added bonus for me is the feeling of relaxation and sense of renewal that usually accompanies my sessions. :)  I place a high level of trust in Dr. Ryu and his work. His staff does a great job as well--very kind, helpful and professional.  Highly recommend.&quot;</p><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star">
+          <div class="testimonial_author">J C.</div>
+          <div class="testimonial_date">09/01/15</div>
+        </div>
+      </div>
+    </div>
+    <div class="horizontal_progress"></div>
   </div>
   <div class="parallax_section">
     <div class="parallax_block_needles"></div>
