Adjusted cards to show a change in color on the borders from the blue used throughout the site to a darker shade

--- a/testimonials.html
+++ b/testimonials.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Sep 23 2020 13:24:44 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 23 2020 15:24:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -26,7 +26,12 @@
     </div>
   </div>
   <div class="testimonial_page_section">
-    <div class="main_container"></div>
+    <div class="main_container">
+      <div class="w-embed w-script">
+        <script src="https://apps.elfsight.com/p/platform.js" defer=""></script>
+        <div class="elfsight-app-93afdd85-8fb8-46cc-a3c9-ba754eb83d16"></div>
+      </div>
+    </div>
   </div>
   <div class="footer_section">
     <div class="ends_container">
